# ITMO-Discrete-Math

./: .gitignore  CMakeLists.txt  DM3.ipynb  README.md
include/FuzzyRelation/: fuzzy_relation.hpp
include/FuzzySets/: fuzzy_set.hpp
src/: fuzzy_relation.tpp  fuzzy_set.tpp  main.cpp
tests/: CMakeLists.txt  fuzzy_relations_test.cpp  fuzzy_sets_test.cpp
